# FilterEmail

./: .gitignore  PLAN.md  README.md  codex-smtp-upgrade-prompt.md  implementation_plan.md  index.html  package-lock.json  package.json  patch_app.py  patch_history_ui.py  patch_mx_dead.py  patch_mx_dead_detailed.py  rewrite_ui.py  tailwind.config.js  vite.config.ts
.codex_deploy/: filteremail_vps_key  filteremail_vps_key.pub
docs/: verify-evaluation.md
docs/architecture/: compat-invariants.md  module-map.md  repo-layout.md
docs/operations/: deploy-key-rotation.md  verify-evaluation.md  verify-vps-deploy.md
docs/prompts/: codex-smtp-upgrade-prompt.md  deep-dns-scan-prompt.md
scripts/experiments/: sim.py
scripts/patches/: implement_history.py  patch_app_ui.py  patch_processor.py  rewrite_processor.py  update_app.py  update_app_features.py
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  processor.rs  smtp_client.rs  smtp_status.rs  smtp_verify.rs
src-tauri/src/processor/: cache.rs  classify.rs  dns.rs  errors.rs  input.rs  mod.rs  output.rs  payload.rs  pipeline.rs  types.rs
src/components/: app-header.tsx  final-summary.tsx  history-modal.tsx  results-panel.tsx  settings-panel.tsx  top-dashboard.tsx  verify-ui.tsx
src/hooks/: use-processing-controller.ts
src/lib/: app-state.ts  app-storage.ts  (+1 more)
tools/: verify_eval.py
verify-vps/: Cargo.toml
verify-vps/src/: cache.rs  catch_all.rs  main.rs  rate_limiter.rs  smtp.rs
