[package]
name = "filter_email"
version = "0.1.0"
edition = "2024"
description = "Desktop email file classifier built with Tauri v2"
default-run = "filter_email"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
idna = "0.5"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
